<resources>
    <string name="app_name">Gramedsaya</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GramedSaya App</string>
    <string name="nav_header_subtitle">Kelompok 7</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_list">List</string>
    <string name="menu_profile">Profile</string>
    <string name="admin_login_key">Enter Admin Key</string>
    <string name="login_admin">Login</string>
    <string name="list_view">Vertical Scroll</string>
    <string name="grid_view">Horizontal Scroll</string>
    <string name="home_description">Selamat datang di aplikasi GRAMEDSAYA! Aplikasi ini adalah platform untuk meminjam buku, menampilkan deskripsi lengkap dan ketersediaan buku, baik fiksi maupun non-fiksi. Temukan dan pinjam buku favorit Anda dengan mudah dan nikmati pengalaman membaca yang menyenangkan bersama GRAMEDSAYA.</string>
    <string name="profile_title_name">GROUP 7</string>
    <string name="profile_name_1">Erlysa Maharani - L0122055</string>
    <string name="profile_name_2">Fadhilah Ishma Diyanah - L0122059</string>
    <string name="profile_name_3">Fathin Achmad Ashari - L0122062</string>
    <string name="profile_name_4">Haidar Dzaky Musyaffa - L0122070</string>
    <string name="profile_name_5">Irfan Adi Prasetya - L0122079</string>
    <string name="list_title_1">Recommended</string>
    <string name="list_title_2">Coming Soon</string>
    <string name="list_title_3">Fiction</string>
    <string name="list_title_4">Non-Fiction</string>
    <string name="detail_title">extra title</string>
    <string name="detail_desc">extra desc</string>
    <string name="detail_synopsis">extra synopsis</string>
    <string name="detail_button">Back</string>
    <string name="comingsoon_book_title">Reckless (B&amp;N Exclusive Edition)</string>
    <string-array name="fiction_books_title">
        <item>Red Queen</item>
        <item>Aroma Karsa</item>
        <item>Closed Casked</item>
        <item>Laut Bercerita</item>
        <item>Warisan (Inheritance)</item>
        <item>Holy Mother</item>
        <item>Pembunuh di balik kabut(Why Didn\`t They Ask Evans?)</item>
        <item>Penelusuran benang merah(a study in scratlet)</item>
        <item>Bumi</item>
        <item>Tujuh Kelana</item>
        <item>The Haunting of Hill House</item>
        <item>Surat dari Kematian</item>
        <item>Saat - Saat Jauh</item>
        <item>The Good Son</item>
        <item>Bajak Laut dan Purnama Terakhir</item>
        <item>The Devil All the Time</item>
        <item>The Lord of The Rings 1 : The Fellowship of The Ring</item>
        <item>Divortiare</item>
        <item>Pesta Bunuh Diri</item>
        <item>Mismatch</item>
    </string-array>
    <string-array name="nonfiction_books_title">
        <item>Catatan Seorang Demonstran</item>
        <item>Sebuah Seni Untuk Bersikap Bodo Amat</item>
        <item>I Want To Die But I Want To Eat Tteokpokki</item>
        <item>Atomic Habits</item>
        <item>The Lean Startup</item>
        <item>Sapiens</item>
        <item>How To Win Friends and Influence People</item>
        <item>Thinking, Fast and Slow</item>
        <item>Quiet: The Power of Introverts in a World That Can\’t Stop Talking</item>
        <item>Educated: A Memoir</item>
        <item>Filosofi Teras</item>
        <item>What I Talk About When I Talk About Running: A Memoir</item>
        <item>The Life-Changing Manga of Tidying Up</item>
        <item>The Gene: An Intimate History</item>
        <item>Jiwa yang Patah</item>
        <item>Emotional Intelligence</item>
        <item>Almost Adulting: Self-Help Approach to Deal With Quarter-Life Crisis</item>
        <item>SHabibie dan Ainun</item>
        <item>Talk Like TED</item>
        <item>What\'s So Wrong About Your Life</item>
    </string-array>
    <string name="comingsoon_books_desc">Rating : ???/5 \n\nAuthor : Lauren Roberts        \n\nGenre : Fantasy, Romance, Trilogy.        \n\nHalaman : 512</string>
    <string-array name="fiction_books_desc">
        <item>Rating : 4,75/5 \n\nAuthor : Victoria Aveyard        \n\nGenre : Sci-Fi, Fantasi.        \n\nHalaman : 524</item>
        <item>Rating : 4,6/5 \n\nAuthor : Dee Lestari        \n\nGenre : Fiksi, Fantasi.        \n\nHalaman : 710</item>
        <item>Rating : 3,6/5 \n\nAuthor : Sophie Hannah        \n\nGenre : Misteri, Fiksi.        \n\nHalaman : 448</item>
        <item>Rating : 4,6 \n\nAuthor : Leila S. Chudori        \n\nGenre : Fiksi.       \n\nHalaman : 379</item>
        <item>Rating : 4,1/5 \n\nAuthor : Christopher Paolini        \n\nGenre : Fiksi, Fantasi.\n\nHalaman : 920</item>
        <item>Rating : 4,6/5 \n\nAuthor : Rikako Akiyoshi        \n\nGenre : Thriller, Misteri, Fiksi, Fantasi.       \n\nHalaman : 280</item>
        <item>Rating : 4,3/5 \n\nAuthor : Agatha Cristie        \n\nGenre : Misteri, Thriller, Fiksi.        \n\nHalaman : 256</item>
        <item>Rating : 4,65/5 \n\nAuthor : Arthur Conan Doyle        \n\nGenre : Fiksi, Detektif.\n\nHalaman : 160</item>
        <item>Rating : 4,9/5 \n\nAuthor : Tere Liye        \n\n:Genre  Fantasi, Fiksi.       \n\nHalaman : 440</item>
        <item>Rating : 4,8/5 \n\nAuthor : Nellaneva        \n\n:Genre  Fantasi, Fiksi.        \n\nHalaman : 384</item>
        <item>Rating : 3,9/5 \n\nAuthor : Shirley Jackson        \n\nGenre : Horror Psikologis, Horror Fiksi, Gothic Fiksi, Fiksi Psikologis.        \n\nHalaman : 373</item>
        <item>Rating : 4,2/5 \n\nAuthor : Adham T. Fusama        \n\nGenre : Horror, Thriller, Misteri, Fiksi.       \n\nHalaman : 388</item>
        <item>Rating : 4,1/5 \n\nAuthor : Lia Seplia        \n\nGenre : Romance, Fiksi.        \n\nHalaman : 192</item>
        <item>Rating : 4,6/5 \n\nAuthor : Jeong You-Jeong        \n\nGenre : Thriller, Fiksi.       \n\nHalaman : 412</item>
        <item>Rating : 3,9/5 \n\nAuthor : Adhitya Mulya        \n\nGenre : Komedi Sejarah, Fiksi.       \n\nHalaman : 329</item>
        <item>Rating : 3,1/5 \n\nAuthor : Donald Ray Pollock        \n\nGenre : Thriller, Crime Fiction, Suspens, Gothic Fiction.        \n\nHalaman : 344</item>
        <item>Rating : 4,4/5 \n\nAuthor : J.R.R Tolkien        \n\nGenre : Fantasi, Fiksi.        \n\nHalaman : 1216</item>
        <item>Rating : 4,7/5 \n\nAuthor : Ika Natassa        \n\nGenre : Chicklit, Fiksi.       \n\nHalaman : 328</item>
        <item>Rating : 4,2/5 \n\nAuthor : Daniel Ahmad        \n\n2Genre : Thriller, Horror, Fiksi.\n\nHalaman : 308</item>
        <item>Rating : 3,9/5 \n\nAuthor : Arata Kim        \n\nGenre : Metropop, Fiksi.       \n\nHalaman : 336</item>
    </string-array>
    <string-array name="nonfiction_books_desc">
        <item>Rating : 4,1/5 \n\nAuthor : Soe Hok Gie        \n\nGenre : Biografi, Non Fiksi.\n\nHalaman : 385</item>
        <item>Rating : 4,6/5 \n\nAuthor : Mark Manson        \n\nGenre : Buku bantuan diri, Non - fiksi.\n\nHalaman : 246</item>
        <item>Rating : 4,65/5 \n\nAuthor : Baek Se Hee        \n\nGenre : Buku bantuan diri, Non - fiksi.\n\nHalaman : 236</item>
        <item>Rating : 4,75/5 \n\nAuthor : James Clear        \n\nGenre : Buku bantuan diri, Non - fiksi.\n\nHalaman : 352</item>
        <item>Rating : 4,6/5 \n\nAuthor : Eric Ries        \n\nGenre : Kewirusahaan, Non Fiksi.\n\nHalaman : 316</item>
        <item>Rating : 4,55/5 \n\nAuthor : Yuval Noah Harari        \n\nGenre : Non-fiksi.\n\nHalaman : 443</item>
        <item>Rating : 4,7/5 \n\nAuthor : Dale Carnegie        \n\nGenre : Non-fiksi.\n\nHalaman : 291</item>
        <item>Rating : 4,6/5 \n\nAuthor : Daniel Kahneman        \n\nGenre : Non-fiksi.\n\nHalaman : 652</item>
        <item>Rating : 4,25/5 \n\nAuthor : Susan Cain        \n\nGenre : Buku bantuan diri, Non - fiksi.\n\nHalaman : 333</item>
        <item>Rating : 4,4/5 \n\nAuthor : Tara Westover        \n\nGenre : Biografi, Non Fiksi.\n\nHalaman : 520</item>
        <item>Rating : 4,1/5 \n\nAuthor : Henry Manampiring        \n\nGenre : Self development, filsafat, non fiksi.\n\nGHalaman : 344</item>
        <item>Rating : 3,9/5 \n\nAuthor : Haruki Murakami        \n\nGenre : Memoir, Biography, Autobiography, Non - Fiksi.\n\nHalaman : 175</item>
        <item>Rating : 4,6/5 \n\nAuthor : Marie Kondo        \n\nGenre : Self help book, Non - fiksi.\n\nHalaman : 224</item>
        <item>Rating : 4,5/5 \n\nAuthor : Siddhartha Mukherjee        \n\nGenre : Non-fiksi ilmiah, Sejarah Sosial, Memoar Pribadi.\n\nHalaman : 608</item>
        <item>Rating : 4,6/5 \n\nAuthor : Ingurah Suryawan        \n\nGenre : Sejarah Suny, Antropologi Reflektif, Non - fiksi.\n\nHalaman : 328</item>
        <item>Rating : 4,5/5 \n\nAuthor : Daniel Goleman        \n\nGenre : MPengembangan diri, Motivasi, Kecerdasan Emosional, Buku Umum.\n\nHalaman : 352</item>
        <item>Rating : 4,5/5 \n\nAuthor : Nadhira Afifa        \n\nGenre : Self help, Non - Fiksi.\n\nHalaman : 218</item>
        <item>Rating : 4,9/5 \n\nAuthor : Bacharuddin Jusuf Habibie        \n\nGenre : Biografi, Non - fiksi.\n\nGHalaman : 321</item>
        <item>Rating : 4,4/5 \n\nAuthor : Carmine Gallo        \n\nGenre : Business book, Non - fiksi.\n\nHalaman : 278</item>
        <item>Rating : 4,2/5 \n\nAuthor : Ardhi Mohamad        \n\nGenre : Non-fiksi, Self Improvement.\n\nHalaman : 180</item>
    </string-array>
    <string name="comingsoon_book_synopsis">Sinopsis : \nSetelah selamat dari Ujian Penyucian, Paedyn Gray yang lahir dari rakyat biasa telah membunuh Raja dan memulai Perlawanan di seluruh negeri. Sekarang dia melarikan diri dari satu orang yang dia inginkan untuk ditemui.\nKai Azer kini menjadi Penegak Hukum Ilya, setia kepada saudaranya Kitt, Raja baru. Dia telah bersumpah untuk menemukan Paedyn dan membawanya ke pengadilan.\nMelintasi Gurun yang mematikan, dan jauh ke dalam kota Dor yang penuh bahaya, Kai mengejar satu orang yang dia harap tidak perlu dikejar. Tetapi di kota tanpa Kaum Elite, keseimbangan antara pemburu dan yang diburu bergeser dan pertarungan antara kewajiban dan keinginan menjadi mematikan."</string>
    <string name="login_as_admin">Login as Admin</string>
    <string name="logout_as_admin">logout</string>
    <string name="item_books_status">Status</string>
</resources>